clang/test/BSC/Negative/Method/Struct/struct_static_function_not_found/struct_static_function_not_found.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

int struct Foo::getA() { // expected-note {{'getA' declared here}}
  return 1;
}


int main() {
  struct Foo::getB(); // expected-error {{no member named 'getB' in 'struct Foo'; did you mean 'getA'?}}
  return 0;
}